# CryptoData

./: .gitignore  Config.py  alembic.ini  codecov.yml  conftest.py  docker-compose.yml  download.py  process_price_levels.py  pyproject.toml  requirements.txt  setup.cfg  utils.py
.github/workflows/: python-test.yml
alembic/: env.py
alembic/versions/: 2feb6c33aa9a_add_linear_perpetual_table.py  3fdbdfdcef84_add_trades_history_raw.py  624df8e0e995_initial_migration.py  864c58fbc5c9_add_raw_kline_table.py  8b1d797caa1f_create_kline_5_min_table.py  9f6d3fdbe956_adding_is_processed_flag.py  af872e1a3e86_add_price_levels.py  e1ffa1d6da1e_add_15m_1h_4h_1d_tables.py
api/: Dockerfile  load.py
dataManagers/: ByBitMarketDataManager.py
database/: Operations.py
database/models/: Account.py  Market.py  PriceLevels.py
tests/: test_bybit_data.py  test_operations.py
trading/analysis/: performance.py
trading/engine/: Broker.py  Event.py  backtest.py
trading/optimization/: optimizer.py
trading/strategies/: BaseStrategy.py  ma_crossover.py
web/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  ThemeToggle.jsx  TradingDashboard.jsx  index.css
web/src/components/: Chart.jsx  ChartComponent.jsx  Datatable.jsx  Markets.jsx  Navbar.jsx  Sidebar.jsx  Symbol.jsx  SymbolsComponent.jsx  ThemeToggle.jsx  TradingOpportunities.jsx
web/src/contexts/: ThemeContext.jsx
web/src/hooks/: useThemeColors.js
web/src/services/: api.js  websockets.js
web/src/theme/: chartTheme.js  colors.js
xchanges/: ByBit.py
(+1 files in other folders)
