[tool.poetry]
name = "cryptodata"
version = "0.1.0"
description = ""
authors = ["Ashish Pandey <ashish.jnvm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.6.0"
alembic = "^1.13.3"
sqlmodel = "^0.0.22"
psycopg2-binary = "^2.9.10"
pytest = "^8.3.3"
pybit = "^5.8.0"
pandas = "^2.2.3"
seaborn = "^0.13.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
